# data-source-faker

./: .gitignore  README.md  main.py  pyproject.toml
examples/: config.yaml  main.py
src/data_source_faker/: main.py
src/source_faker/: __init__.py  main.py  models.py
src/source_faker/providers/: database_column.py
tests/: pytest.ini
tests/data_source_faker/: test_main.py
