[tool.poetry]
name = "source-faker"
version = "0.1.0"
description = ""
authors = ["dfunto <danilo.castrodutra@brenntag.com>"]
readme = "README.md"
packages = [{include = "source_faker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
